# syn_api_axum

./: Cargo.toml  README.md  docker-compose.yaml
src/: main.rs
src/middleware/: headers.rs  mongo.rs
src/routes/: mongo.rs
src/state/: state.rs
src/types/mongo/requests/: aggregate.rs  delete.rs  find.rs  find_one.rs  insert_many.rs  insert_one.rs  update.rs
src/types/mongo/traits/: requests.rs
src/utils/: mongo.rs  response.rs
