[package]
name = "syn_api_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenv = "0.15.0"
futures = "0.3"
hyper = "0.14.27"
mongodb = "2.6.0"
serde = "1.0.171"
serde_json = "1.0.103"
tokio = "1.29.1"
tower = "0.4.13"
